[gd_scene load_steps=18 format=3 uid="uid://ckp7vet0hkudt"]

[ext_resource type="Texture2D" uid="uid://b8eb73solqtmo" path="res://Assets/necromancerBoss/obelisk/FlyingObelisk_no_lightnings_no_letter.png" id="1_2pyul"]
[ext_resource type="Script" path="res://Scripts/obelisk.gd" id="1_7f68x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mcrfw"]
atlas = ExtResource("1_2pyul")
region = Rect2(0, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kpm3"]
atlas = ExtResource("1_2pyul")
region = Rect2(200, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_58g34"]
atlas = ExtResource("1_2pyul")
region = Rect2(400, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5j5u"]
atlas = ExtResource("1_2pyul")
region = Rect2(600, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuor4"]
atlas = ExtResource("1_2pyul")
region = Rect2(800, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufb4n"]
atlas = ExtResource("1_2pyul")
region = Rect2(1000, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_orav8"]
atlas = ExtResource("1_2pyul")
region = Rect2(1200, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_07jco"]
atlas = ExtResource("1_2pyul")
region = Rect2(1400, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k8dm"]
atlas = ExtResource("1_2pyul")
region = Rect2(1600, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cr5u"]
atlas = ExtResource("1_2pyul")
region = Rect2(1800, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4m1s"]
atlas = ExtResource("1_2pyul")
region = Rect2(2000, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_etyba"]
atlas = ExtResource("1_2pyul")
region = Rect2(2200, 0, 200, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ket"]
atlas = ExtResource("1_2pyul")
region = Rect2(2400, 0, 200, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_wirid"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcrfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kpm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58g34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5j5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuor4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufb4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orav8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07jco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k8dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cr5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4m1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etyba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ket")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcg38"]
size = Vector2(264, 624)

[node name="obelisk" type="Node2D"]
script = ExtResource("1_7f68x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wirid")
autoplay = "default"
frame_progress = 0.964115

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, 32)
shape = SubResource("RectangleShape2D_vcg38")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_right = 360.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 32
text = "(Press k to destroy)"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
